change footer and logo link

--- a/footer.html
+++ b/footer.html
@@ -104,6 +104,6 @@
       integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
       crossorigin="anonymous"
     ></script>
-    <script src="/js/style.js"></script>
+    <script src="./js/style.js"></script>
   </body>
 </html>
