--- a/header.html
+++ b/header.html
@@ -70,7 +70,9 @@
       <section class="section-header">
         <div class="container">
           <nav class="navbar navbar-expand-lg navbar-light">
-            <img src="img/logo.png" alt="logo" class="navbar-logo" />
+            <a href="/">
+              <img src="img/logo.png" alt="logo" class="navbar-logo" />
+            </a>
             <button
               class="navbar-toggler bg-light"
               type="button"
