change bus-tours to sale

--- a/footer-cruises.html
+++ b/footer-cruises.html
@@ -33,23 +33,23 @@
               <a class="footer-link" aria-current="page" href="/">Главная</a>
             </li>
             <li class="footer-item">
-              <a class="footer-link" href="/about.php">О нас</a>
+              <a class="footer-link" href="/about">О нас</a>
             </li>
             <li class="footer-item">
-              <a class="footer-link" href="/hot-tours.php">Горящие туры</a>
+              <a class="footer-link" href="/hot-tours">Горящие туры</a>
             </li>
             <li class="footer-item">
-              <a class="footer-link" href="/bustour.php">Автобусные туры</a>
+              <a class="footer-link" href="/sale">Акции</a>
             </li>
             <li class="footer-item">
-              <a class="footer-link" href="/cruises.php">Круизы</a>
+              <a class="footer-link" href="/cruises">Круизы</a>
             </li>
             <li class="footer-item">
-              <a class="footer-link" href="/payment.php">Способы оплаты</a>
+              <a class="footer-link" href="/payment">Способы оплаты</a>
             </li>
 
             <li class="footer-item">
-              <a class="footer-link" href="/contacts.php">Контакты</a>
+              <a class="footer-link" href="/contacts">Контакты</a>
             </li>
           </ul>
         </div>
@@ -106,6 +106,17 @@
       integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
       crossorigin="anonymous"
     ></script>
+
+    <!-- Cruise Widget JS Begin -->
+    <script>
+      cesSettings = {
+        email: "info@marytour.ru",
+        currencies: ["RUB"],
+      }
+      </script>
+      <script src="https://widget.gocruise.ru/js/app.js"></script>
+      <!-- Cruise Widget JS End -->
+      
     <script src="/js/style.js"></script>
   </body>
 </html>
