--- a/footer.html
+++ b/footer.html
@@ -39,7 +39,7 @@
               <a class="footer-link" href="/hot-tours">Горящие туры</a>
             </li>
             <li class="footer-item">
-              <a class="footer-link" href="/bus-tours">Автобусные туры</a>
+              <a class="footer-link" href="/sale">Акции</a>
             </li>
             <li class="footer-item">
               <a class="footer-link" href="/cruises">Круизы</a>
