--- a/header.html
+++ b/header.html
@@ -99,7 +99,7 @@
                   <a class="nav-link" href="/hot-tours">Горящие туры</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/bus-tours">Автобусные туры</a>
+                  <a class="nav-link" href="/sale">Акции</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/cruises">Круизы</a>
