--- a/footer.html
+++ b/footer.html
@@ -59,7 +59,7 @@
             офис 303
           </address>
           <div class="footer-contact">
-            <a class="footer-tel" href="tel:+74992504359">+7(499)250-43-59</a>
+            <!-- <a class="footer-tel" href="tel:+74992504359">+7(499)250-43-59</a> -->
             <a class="footer-tel" href="tel:+74956496176">+7(495)649-61-76</a>
             <span>пн-пт: 10:00 - 20:00</span>
             <span>сб-вс: 11:00 - 17:00</span>
