--- a/header.html
+++ b/header.html
@@ -5,34 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="keywords"
-      content="Миротур.ру - Marytour.ru Горящие туры (путевки) в Египет, Турцию, Тайланд) в Египет, Турцию, Тайланд, Гоа, Болгарию, Грецию, Мальдивы, Израиль, Тунис."
-    />
+      content="Миротур.ру - Marytour.ru Горящие туры (путевки) в Египет, Турцию, Тайланд) в Египет, Турцию, Тайланд, Гоа, Болгарию, Грецию, Мальдивы, Израиль, Тунис." />
     <meta
       name="description"
-      content="Миротур.ру - Marytour.ru Горящие туры (путевки) в Египет, Турцию, Тайланд) в Египет, Турцию, Тайланд, Гоа, Болгарию, Грецию, Мальдивы, Израиль, Тунис."
-    />
+      content="Миротур.ру - Marytour.ru Горящие туры (путевки) в Египет, Турцию, Тайланд) в Египет, Турцию, Тайланд, Гоа, Болгарию, Грецию, Мальдивы, Израиль, Тунис." />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
       integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous" />
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://widget.gocruise.ru/css/app.css" />
     <link
       rel="stylesheet"
-      href="https://widget.gocruise.ru/css/themes/dark.css"
-    />
+      href="https://widget.gocruise.ru/css/themes/dark.css" />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="img/favicon-32x32.png"
-    />
+      href="img/favicon-32x32.png" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/lightbox.css" />
     <title>МИРОТУР!</title>
@@ -42,15 +36,13 @@
       <div
         id="carouselExampleFade"
         class="carousel slide carousel-fade"
-        data-ride="carousel"
-      >
+        data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-interval="10000">
             <img
               src="img/travel1.webp"
               class="d-block img-fluid"
-              alt="travel"
-            />
+              alt="travel" />
           </div>
           <div class="carousel-item" data-interval="10000">
             <img src="img/travel2.webp" class="d-block w-100" alt="travel" />
@@ -80,8 +72,7 @@
               data-target="#navbarSupportedContent"
               aria-controls="navbarSupportedContent"
               aria-expanded="false"
-              aria-label="Переключатель навигации"
-            >
+              aria-label="Переключатель навигации">
               <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -113,9 +104,9 @@
                 </li>
               </ul>
               <div class="header-contact text-center">
-                <a class="header-tel" href="tel:+74992504359"
-                  >+7(499)250-43-59</a
-                >
+                <!-- <a class="header-tel" href="tel:+74992504359"
+                  >+7(499)250-43-59</a 
+                > -->
                 <a class="header-tel" href="tel:+74956496176"
                   >+7(495)649-61-76</a
                 >
